# depthai_test_plugin

./: CMakeLists.txt  depthai_test_plugin.xml  package.xml
config/: rgbtest.yaml
include/depthai_test_plugin/dai_nodes/sensors/: rgb_test.hpp
include/depthai_test_plugin/pipeline/: test_base_types.hpp
launch/: load.launch.py  test.launch.py
src/: test_pipeline.cpp
src/dai_nodes/sensors/: rgb_test.cpp
